Cleaned repo a big bit.

--- a/gnl/Makefile
+++ b/gnl/Makefile
@@ -2,11 +2,14 @@ CC=gcc
 CFLAGS=-Wall -Werror -Wextra -c
 SRC=get_next_line.c
 OBJ=$(SRC:.c=.o)
+NAME=get_next_line
 
 all:
-	$(CC) $(CFLAGS) $(SRC) -I../libft
+	@echo "Compiling $(NAME)"
+	@$(CC) $(CFLAGS) $(SRC) -I../libft
 
 clean:
-	/bin/rm -f $(OBJ)
+	@echo "Cleaning $(NAME)"
+	@/bin/rm -f $(OBJ)
 
 fclean: clean
