--- a/libft/Makefile
+++ b/libft/Makefile
@@ -31,7 +31,7 @@ SRC=ft_memset.c ft_bzero.c ft_memcpy.c ft_memccpy.c ft_memmove.c ft_memchr.c \
 OBJ=$(SRC:.c=.o)
 
 $(NAME): $(SRC)
-	@echo "Compiling library!"
+	@echo "Compiling $(NAME)"
 	@$(CC) $(CFLAGS) -c $? $(SRC)
 	@ar rc $(NAME) $(OBJ)
 	@ranlib $(NAME)
@@ -39,11 +39,11 @@ $(NAME): $(SRC)
 all: $(NAME)
 
 clean:
-	@echo "Cleaning objects..."
+	@echo "Cleaning objects of $(NAME)"
 	@/bin/rm -f $(OBJ)
 
 fclean: clean
-	@echo "Cleaning lib."
+	@echo "Cleaning $(NAME)."
 	@/bin/rm -f $(NAME)
 
 re: fclean $(NAME)
