--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: vbastion <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2017/04/12 19:31:49 by vbastion          #+#    #+#              #
-#    Updated: 2017/05/17 14:18:44 by vbastion         ###   ########.fr        #
+#    Updated: 2017/05/22 10:28:48 by vbastion         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -30,12 +30,11 @@ SRC=ft_memset.c ft_bzero.c ft_memcpy.c ft_memccpy.c ft_memmove.c ft_memchr.c \
 	ft_isspace.c ft_atoibase.c ft_atoinbase.c ft_atoihex.c get_next_line.c
 OBJ=$(SRC:.c=.o)
 
-$(NAME): $(OBJ)
+$(NAME): 
+	gcc -c $(SRC) $(CFLAGS)
 	ar rc $(NAME) $(OBJ)
 	ranlib $(NAME)
 
-%.o: %.c
-	$(CC) -c $< $(CFLAGS) -o $@
 
 all: $(NAME)
 
